--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Basic Portfolio</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
@@ -13,9 +13,9 @@
     <h1>Ryan Cowles</h1>
     <div class="menu">
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#about">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
   </header>
