--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,9 @@
     </div>
   </header>
 
+  <section>
   <!-- About Me, picture and description -->
-  <div class="contact">
+  <div class="mainContent">
     <h2>Contact</h2>
     	<form>
   			Name:<br>
@@ -42,6 +43,7 @@
       <a href="https://www.linkedin.com/in/rcowles3/" target="_blank">LinkedIn</a>
       <a href="https://stackoverflow.com/users/7803031/ryan-cowles" target="_blank">StackOverflow</a>
   </div>
+  </section>
 
   <div class="footer">
     <p>
