--- a/index.html
+++ b/index.html
@@ -8,35 +8,38 @@
 </head>
 
 <body>
-  <!-- Who's Portfolio -->
+    <!-- Who's Portfolio -->
   <header>
     <h1>Ryan Cowles</h1>
-    <div class="menu">
       <ul>
         <li><a href="index.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-    </div>
   </header>
 
-  <!-- About Me, picture and description -->
-  <div class="about">
-    <h2>About Me</h2>
+  <section>
+    <!-- About Me, picture and description -->
+    <div class="mainContent">
+      <h2>About Me</h2>
+      <hr>
+      <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+        <p>
+         Graduated with a Bachelor’s of Science in Computer Information Systems at The W.A. Franke College of Business at Northern Arizona University, I am in pursuit of employment opportunities to complement and grow my skills and knowledge within the technical industry. While being a full time employee here at GoDaddy, my goal is to develop new skills as well as tone my current, with plans to become knowledgeable and fluent in Full Stack Programming, to gain the experience to pursue a career in Web Development. 
+        </p>
+         <p>
+         Graduated with a Bachelor’s of Science in Computer Information Systems at The W.A. Franke College of Business at Northern Arizona University, I am in pursuit of employment opportunities to complement and grow my skills and knowledge within the technical industry. While being a full time employee here at GoDaddy, my goal is to develop new skills as well as tone my current, with plans to become knowledgeable and fluent in Full Stack Programming, to gain the experience to pursue a career in Web Development. 
+        </p>
+    </div>
 
-    <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
-      <p>
-        Graduated with a Bachelor’s of Science in Computer Information Systems at The W.A. Franke College of Business at Northern Arizona University, I am in pursuit of employment opportunities to complement and grow my skills and knowledge within the technical industry. While being a full time employee here at GoDaddy, my goal is to develop new skills as well as tone my current, with plans to become knowledgeable and fluent in Full Stack Programming, to gain the experience to pursue a career in Web Development. 
-      </p>
-  </div>
-
-  <!-- Online profile -->
-  <div class="social">
-    <h2>Connect With Me</h2>
-      <a href="https://github.com/rcowles3/" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/in/rcowles3/" target="_blank">LinkedIn</a>
-      <a href="https://stackoverflow.com/users/7803031/ryan-cowles" target="_blank">StackOverflow</a>
-  </div>
+    <!-- Online profile -->
+    <div class="social">
+      <h2>Connect With Me</h2>
+        <a href="https://github.com/rcowles3/" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/rcowles3/" target="_blank">LinkedIn</a>
+        <a href="https://stackoverflow.com/users/7803031/ryan-cowles" target="_blank">StackOverflow</a>
+    </div>
+    </section>
 
   <div class="footer">
     <p>
