--- a/portfolio.html
+++ b/portfolio.html
@@ -1,37 +1,48 @@
-  <!-- Who's Portfolio -->
+<!DOCTYPE html>
+<html lang="en-us">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Basic Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+    <!-- Who's Portfolio -->
   <header>
     <h1>Ryan Cowles</h1>
-    <div class="menu">
       <ul>
         <li><a href="index.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-    </div>
   </header>
 
-  <!-- About Me, picture and description -->
-  <div class="portfolio">
+  <section>
+    <!-- About Me, picture and description -->
+  <div class="mainContent">
     <h2>Portfolio</h2>
-
-    <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
-    <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
-    <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
-    <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
-
-  
+      <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+      <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+      <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+      <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
   </div>
 
-  <!-- Online profile -->
-  <div class="social">
-    <h2>Connect With Me</h2>
-      <a href="https://github.com/rcowles3/" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/in/rcowles3/" target="_blank">LinkedIn</a>
-      <a href="https://stackoverflow.com/users/7803031/ryan-cowles" target="_blank">StackOverflow</a>
-  </div>
+    <!-- Online profile -->
+    <div class="social">
+      <h2>Connect With Me</h2>
+        <a href="https://github.com/rcowles3/" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/rcowles3/" target="_blank">LinkedIn</a>
+        <a href="https://stackoverflow.com/users/7803031/ryan-cowles" target="_blank">StackOverflow</a>
+    </div>
+    </section>
 
   <div class="footer">
     <p>
       &copy; Copyright 2017 Ryan Cowles
     </p>
   </div>
+
+</body>
+
+</html>
