new updated files. completed css.

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
   <!-- About Me, picture and description -->
   <div class="mainContent">
     <h2>Contact</h2>
+    <hr>
     	<form>
   			Name:<br>
   			<input type="text" name="name"><br>
@@ -45,6 +46,9 @@
   </div>
   </section>
 
+  <div class="atopFooter">
+    <hr>
+  </div>
   <div class="footer">
     <p>
       &copy; Copyright 2017 Ryan Cowles
