--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     </div>
     </section>
 
+  <div class="atopFooter">
+    <hr>
+  </div>
   <div class="footer">
     <p>
       &copy; Copyright 2017 Ryan Cowles
