--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
     <!-- About Me, picture and description -->
   <div class="mainContent">
     <h2>Portfolio</h2>
+    <hr>
       <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
       <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
       <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
@@ -37,6 +38,9 @@
     </div>
     </section>
 
+  <div class="atopFooter">
+    <hr>
+  </div>
   <div class="footer">
     <p>
       &copy; Copyright 2017 Ryan Cowles
