--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="mainContent">
       <h2>About Me</h2>
       <hr>
-      <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+      <img id="bio-image" src="https://placehold.it/200x200" alt="Ryan Cowles Photo">
         <p>
          Graduated with a Bachelor’s of Science in Computer Information Systems at The W.A. Franke College of Business at Northern Arizona University, I am in pursuit of employment opportunities to complement and grow my skills and knowledge within the technical industry. While being a full time employee here at GoDaddy, my goal is to develop new skills as well as tone my current, with plans to become knowledgeable and fluent in Full Stack Programming, to gain the experience to pursue a career in Web Development. 
         </p>
@@ -34,10 +34,14 @@
 
     <!-- Online profile -->
     <div class="social">
-      <h2>Connect With Me</h2>
-        <a href="https://github.com/rcowles3/" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/rcowles3/" target="_blank">LinkedIn</a>
-        <a href="https://stackoverflow.com/users/7803031/ryan-cowles" target="_blank">StackOverflow</a>
+      <h3>Connect With Me</h2>
+        <hr>
+          <a href="https://github.com/rcowles3">
+            <img class="icons" src="assets/images/github.ico" alt=GitHub></a>
+          <a href="https://stackoverflow.com/users/7803031/ryan-cowles">
+            <img class="icons" src="assets/images/stack.ico" alt=StackOverFlow></a>
+          <a href="https://www.linkedin.com/in/rcowles3/">
+            <img class="icons" src="assets/images/linkedin.ico" alt=LinkedIn></a>
     </div>
     </section>
 
