--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,14 @@
 
     <!-- Online profile -->
     <div class="social">
-      <h2>Connect With Me</h2>
-        <a href="https://github.com/rcowles3/" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/rcowles3/" target="_blank">LinkedIn</a>
-        <a href="https://stackoverflow.com/users/7803031/ryan-cowles" target="_blank">StackOverflow</a>
+      <h3>Connect With Me</h3>
+        <hr>
+          <a href="https://github.com/rcowles3">
+            <img class="icons" src="assets/images/github.ico" alt=GitHub></a>
+          <a href="https://stackoverflow.com/users/7803031/ryan-cowles">
+            <img class="icons" src="assets/images/stack.ico" alt=StackOverFlow></a>
+          <a href="https://www.linkedin.com/in/rcowles3/">
+            <img class="icons" src="assets/images/linkedin.ico" alt=LinkedIn></a>
     </div>
     </section>
 
