--- a/index.html
+++ b/index.html
@@ -36,24 +36,27 @@
     <div class="social">
       <h3>Connect With Me</h2>
         <hr>
-          <a href="https://github.com/rcowles3">
-            <img class="icons" src="assets/images/github.ico" alt=GitHub></a>
-          <a href="https://stackoverflow.com/users/7803031/ryan-cowles">
-            <img class="icons" src="assets/images/stack.ico" alt=StackOverFlow></a>
-          <a href="https://www.linkedin.com/in/rcowles3/">
-            <img class="icons" src="assets/images/linkedin.ico" alt=LinkedIn></a>
+          <div style="text-align: center">
+            <a href="https://github.com/rcowles3" target="_blank">
+              <img class="icons" src="assets/images/github.ico" alt=GitHub></a>
+            <a href="https://stackoverflow.com/users/7803031/ryan-cowles" target="_blank">
+              <img class="icons" src="assets/images/stack.ico" alt=StackOverFlow></a>
+            <a href="https://www.linkedin.com/in/rcowles3/" target="_blank">
+              <img class="icons" src="assets/images/linkedin.ico" alt=LinkedIn></a>
+          </div>
     </div>
     </section>
 
-  <div class="atopFooter">
-    <hr>
-  </div>
-  <div class="footer">
-    <p>
-      &copy; Copyright 2017 Ryan Cowles
-    </p>
-  </div>
+  <footer>
+    <div class="atopFooter">
 
+    </div> 
+    <div class="footer">
+      <p>
+        &copy; Copyright 2017 Ryan Cowles
+      </p>
+    </div>
+  </footer>
 </body>
 
 </html>
