--- a/portfolio.html
+++ b/portfolio.html
@@ -23,34 +23,39 @@
   <div class="mainContent">
     <h2>Portfolio</h2>
     <hr>
-      <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
-      <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
-      <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
-      <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+      <div style="text-align: center">
+        <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+        <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+        <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+        <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+      </div>
   </div>
 
     <!-- Online profile -->
     <div class="social">
       <h3>Connect With Me</h3>
         <hr>
-          <a href="https://github.com/rcowles3">
-            <img class="icons" src="assets/images/github.ico" alt=GitHub></a>
-          <a href="https://stackoverflow.com/users/7803031/ryan-cowles">
-            <img class="icons" src="assets/images/stack.ico" alt=StackOverFlow></a>
-          <a href="https://www.linkedin.com/in/rcowles3/">
-            <img class="icons" src="assets/images/linkedin.ico" alt=LinkedIn></a>
+          <div style="text-align: center">
+            <a href="https://github.com/rcowles3" target="_blank">
+              <img class="icons" src="assets/images/github.ico" alt=GitHub></a>
+            <a href="https://stackoverflow.com/users/7803031/ryan-cowles" target="_blank">
+              <img class="icons" src="assets/images/stack.ico" alt=StackOverFlow></a>
+            <a href="https://www.linkedin.com/in/rcowles3/" target="_blank">
+              <img class="icons" src="assets/images/linkedin.ico" alt=LinkedIn></a>
+          </div>
     </div>
     </section>
 
-  <div class="atopFooter">
-    <hr>
-  </div>
-  <div class="footer">
-    <p>
-      &copy; Copyright 2017 Ryan Cowles
-    </p>
-  </div>
+  <footer>
+    <div class="atopFooter">
 
+    </div> 
+    <div class="footer">
+      <p>
+        &copy; Copyright 2017 Ryan Cowles
+      </p>
+    </div>
+  </footer>
 </body>
 
 </html>
