--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -31,9 +32,10 @@
   			Email:<br>
   			<input type="text" name="email"><br>
   			Message:<br>
-  			<input type="text" name="message">
-  			<br>
-  			<input type="submit" value="submit">
+  			<textarea rows="10" cols="50" type="text" name="message">
+        </textarea>
+        <br>
+  			<button type="submit" value="submit">Submit
 		</form>
   </div>
 
@@ -53,7 +55,6 @@
 
   <footer>
     <div class="atopFooter">
-
     </div> 
     <div class="footer">
       <p>
