--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Basic Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -20,14 +21,14 @@
 
   <section>
     <!-- About Me, picture and description -->
-  <div class="mainContent">
+  <div class="portfolioImg">
     <h2>Portfolio</h2>
     <hr>
       <div style="text-align: center">
-        <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
-        <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
-        <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
-        <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+        <img id="image1" src="https://placehold.it/200x200" alt="Your Name">
+        <img id="image2" src="https://placehold.it/200x200" alt="Your Name">
+        <img id="image3" src="https://placehold.it/200x200" alt="Your Name">
+        <img id="image4" src="https://placehold.it/200x200" alt="Your Name">
       </div>
   </div>
 
