updated with content finished at work

--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,11 @@
     <hr>
     	<form>
   			Name:<br>
-  			<input type="text" name="name"><br>
+  			<input type="text" placeholder="Your Name" name="name"><br>
   			Email:<br>
-  			<input type="text" name="email"><br>
+  			<input type="text" placeholder="example@domain.com" name="email"><br>
   			Message:<br>
-  			<textarea rows="10" cols="50" type="text" name="message">
+  			<textarea rows="10" cols="71.25%" type="text" name="message">
         </textarea>
         <br>
   			<button type="submit" value="submit">Submit
