--- a/portfolio.html
+++ b/portfolio.html
@@ -24,11 +24,12 @@
   <div class="portfolioImg">
     <h2>Portfolio</h2>
     <hr>
-      <div style="text-align: center">
-        <img id="image1" src="https://placehold.it/200x200" alt="Your Name">
-        <img id="image2" src="https://placehold.it/200x200" alt="Your Name">
-        <img id="image3" src="https://placehold.it/200x200" alt="Your Name">
-        <img id="image4" src="https://placehold.it/200x200" alt="Your Name">
+      <div>
+        <img id="image1" src="assets/images/image1.jpg" alt="Your Name">
+        <img id="image2" src="assets/images/image2.jpg" alt="Your Name">
+        <img id="image3" src="assets/images/image3.jpg" alt="Your Name">
+        <img id="image4" src="assets/images/image4.jpg" alt="Your Name">
+        <img id="image5" src="assets/images/image5.jpg" alt="Your Name">
       </div>
   </div>
 
