--- a/portfolio.html
+++ b/portfolio.html
@@ -21,15 +21,20 @@
 
   <section>
     <!-- About Me, picture and description -->
-  <div class="portfolioImg">
+  <div class="portfolio">
     <h2>Portfolio</h2>
     <hr>
-      <div>
-        <img id="image1" src="assets/images/image1.jpg" alt="Your Name">
-        <img id="image2" src="assets/images/image2.jpg" alt="Your Name">
-        <img id="image3" src="assets/images/image3.jpg" alt="Your Name">
-        <img id="image4" src="assets/images/image4.jpg" alt="Your Name">
-        <img id="image5" src="assets/images/image5.jpg" alt="Your Name">
+      <div class="portfolioImgs">
+        <h1>Hang Man</h1>
+        <img id="image1" src="assets/images/image1.jpg" alt="Hang Man">
+        <h1>RPG Game</h1>
+        <img id="image2" src="assets/images/image2.jpg" alt="RPG Game">
+        <h1>Trivia</h1>
+        <img id="image3" src="assets/images/image3.jpg" alt="Trivia">
+        <h1>Rutgers Info Widget</h1>
+        <img id="image4" src="assets/images/image4.jpg" alt="Rutgers Info Widget">
+        <h1>Rock Paper Sciccors</h1>
+        <img id="image5" src="assets/images/image5.jpg" alt="Rock Paper Sciccors">
       </div>
   </div>
 
