--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   </header>
 
   <section>
-  <!-- About Me, picture and description -->
+  <!-- Contact Form -->
   <div class="mainContent">
     <h2>Contact</h2>
     <hr>
@@ -32,8 +32,7 @@
   			Email:<br>
   			<input type="text" placeholder="example@domain.com" name="email"><br>
   			Message:<br>
-  			<textarea rows="10" cols="71.25%" type="text" name="message">
-        </textarea>
+  			<textarea type="text" name="message" rows="20" cols="95px"></textarea>
         <br>
   			<button type="submit" value="submit">Submit
 		</form>
